--- a/app/views/drawings/index.html.erb
+++ b/app/views/drawings/index.html.erb
@@ -1,1 +1,5 @@
-<div id="canvasDiv" style="height:600px;width:900px;border:1px solid #000000;"></div>
+<div id="canvasDiv" style="height:600px;width:900px;border:1px;margin:auto"></div>
+
+<div style="display:none;">
+  <img id="source" src="http://azcoloring.com/coloring/dT9/Rab/dT9RabyT7.jpg" width="300" height="auto">
+</div>
