--- a/app/views/drawings/index.html.erb
+++ b/app/views/drawings/index.html.erb
@@ -1,5 +1,5 @@
 <div id="canvasDiv" style="height:800px;width:900px;border:1px;margin:auto"></div>
 
 <div style="display:none;">
-  <img id="source" src="http://azcoloring.com/coloring/dT9/Rab/dT9RabyT7.jpg" width="300" height="auto">
+  <img id="source" src="http://azcoloring.com/coloring/dT9/Rab/dT9RabyT7.jpg" width="300" height="auto" margin="auto">
 </div>
