adjusts tip transparency

--- a/app/assets/javascripts/drawings.js.erb
+++ b/app/assets/javascripts/drawings.js.erb
@@ -5,6 +5,7 @@ $(function(){
   var image = document.getElementById("source");
   context.drawImage(image, 100,100);
 
+  context.globalAlpha = 1;
   var paint;
   mouseCoordinates = new Array();
 });
