--- a/app/assets/stylesheets/drawing.css
+++ b/app/assets/stylesheets/drawing.css
@@ -14,6 +14,21 @@
   z-index: 3;
 }
 
+#header-div div.right {
+  width: 20%;
+  max-width: 300px;
+  margin-top: 8px;
+}
+
+#header-div div.right {
+  position: relative;
+  float: right;
+}
+
+.search {
+
+}
+
 #canvasDiv {
   height:600px;
   width: 1000px;
@@ -51,23 +66,23 @@
   position:absolute;
 }
 
-
 .tip {
   margin: 5px;
 }
 
-#all-cartoons {
-  margin-top:-80px;
-  height: 500px;
-  overflow: scroll;
-  margin-left: 10px;
+div#cartoons-header {
+  margin-top: -100px;
+  margin-left: 15px;
 }
 
-h4 {
-  margin-top: -100px;
+#all-cartoons {
+  height: 450px;
+  overflow: scroll;
+  margin-left: 15px;
+  text-align: center;
 }
 
 #new-cartoon {
-  margin-top: -60px;
+  margin-top: -100px;
 }
 
