--- a/app/assets/stylesheets/drawing.css
+++ b/app/assets/stylesheets/drawing.css
@@ -11,7 +11,7 @@
   padding: 0;
   border: 0;
   opacity: 1;
-  z-index: 3;
+  z-index: 100;
 }
 
 #header-div div.right {
@@ -23,10 +23,6 @@
 #header-div div.right {
   position: relative;
   float: right;
-}
-
-.search {
-
 }
 
 #canvasDiv {
@@ -41,20 +37,9 @@
   height:500px;
   width:103px;
   border: 1px solid;
-  background: yellow;
   padding: 0;
   z-index: 2;
   display: inline-block;
-}
-
-#canvas {
-  cursor: url(http://cur.cursors-4u.net/others/oth-7/oth697.cur), auto;
-  width: 900px;
-  height: 500px;
-  border: 1px solid;
-  margin:auto;
-  z-index:15;
-  position:absolute;
 }
 
 #image-holder {
@@ -63,6 +48,25 @@
   border:1px solid;
   margin:auto;
   z-index:10;
+  position:absolute;
+}
+
+#mid-layer {
+  width: 900px;
+  height: 500px;
+  border:1px solid;
+  margin:auto;
+  z-index:15;
+  position:absolute;
+}
+
+#canvas {
+  cursor: url(http://cur.cursors-4u.net/others/oth-7/oth697.cur), auto;
+  width: 900px;
+  height: 500px;
+  border: 1px solid;
+  margin:auto;
+  z-index:20;
   position:absolute;
 }
 
@@ -80,6 +84,8 @@ div#cartoons-header {
   overflow: scroll;
   margin-left: 15px;
   text-align: center;
+  cursor: pointer;
+  border: 1px;
 }
 
 #new-cartoon {
