--- a/app/assets/stylesheets/drawing.css
+++ b/app/assets/stylesheets/drawing.css
@@ -60,6 +60,10 @@
   position:absolute;
 }
 
+#canvas .erasing {
+  cursor: url(http://icons.iconarchive.com/icons/oxygen-icons.org/oxygen/48/Actions-draw-eraser-icon.png), auto;
+}
+
 #canvas {
   cursor: url(http://cur.cursors-4u.net/others/oth-7/oth697.cur), auto;
   width: 900px;
@@ -90,4 +94,51 @@ div#cartoons-header {
 
 #new-cartoon {
   margin-top: -100px;
+}
+
+#eraser {
+  cursor: pointer;
+}
+
+#overlay-base {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  margin: auto;
+  z-index: 999;
+  background: rgba(0,0,0,.7);
+  padding-top: 50%;
+}
+
+#overlay-main {
+  width: 50%;
+  height: 50%;
+  background:white; 
+  position:relative; 
+  position:fixed; 
+  margin:auto; 
+  overflow:scroll; 
+  left:20%; 
+  z-index:1000; 
+  bottom:25%; 
+  border-radius:25px;
+}
+
+#overlay-buttons {
+  float:left; 
+  position:fixed;
+  display: block;
+  list-style-type: none;
+}
+
+#search-results {
+  padding-top:30px;
+}
+
+label {
+  font-family: comic sans MS;
 }
