--- a/app/views/drawings/index.html.erb
+++ b/app/views/drawings/index.html.erb
@@ -1,8 +1,8 @@
 <div id="header-div">
   <div class="right">
     <div class="search">
-      <%= form_tag :controller => 'drawing', :action => 'index', :method => 'get' do %>
-        <%= text_field_tag :keyword, params[:keyword], :id => 'search_field' %>
+      <%= form_tag :controller => 'search', :action => 'search', :method => 'get' do %>
+        <%= text_field_tag :keyword, params[:keyword], :id => 'search-field' %>
         <%= submit_tag "Search! ", :content => nil %> 
       <% end %> 
     </div>
@@ -25,10 +25,6 @@
       <% end %>
     </div>
   </td>
-
-  <td>
-    <%= render 'search/create' if @results %>
-  </td>
 </table>
 
 <div id="new-cartoon">
@@ -37,4 +33,17 @@
     <%= f.text_field :name, placeholder: "Cartoon Name" %>
     <%= f.file_field :avatar %>
   <% end %>
+</div>
+
+<div id="overlay-base">
+  <div id="overlay-main">
+    <ul id="overlay-buttons">
+      <li><button id="close-overlay">×</button></li>
+    </ul>
+
+    <label><h2>Choose Your Favorite!</h2></label>
+    <div id="results-div">
+      <%#= render 'search/create' if @results %>
+    </div>
+  </div>
 </div>
