--- a/app/assets/stylesheets/drawing.css
+++ b/app/assets/stylesheets/drawing.css
@@ -18,11 +18,17 @@
   width: 20%;
   max-width: 300px;
   margin-top: 8px;
-}
-
-#header-div div.right {
   position: relative;
   float: right;
+}
+
+#header-div div.left {
+  width: 20%;
+  max-width: 300px;
+  margin-top: -15px;
+  position: relative;
+  float: left;
+  font-family: comic sans ms;
 }
 
 #canvasDiv {
@@ -100,7 +106,7 @@ div#cartoons-header {
   cursor: pointer;
 }
 
-#overlay-base {
+.modal-base {
   width: 100%;
   height: 100%;
   position: fixed;
@@ -114,7 +120,7 @@ div#cartoons-header {
   padding-top: 50%;
 }
 
-#overlay-main {
+.modal-main {
   width: 50%;
   height: 50%;
   background:white; 
@@ -128,8 +134,8 @@ div#cartoons-header {
   border-radius:25px;
 }
 
-#overlay-buttons {
-  float:left; 
+button#close-modal {
+  float:right; 
   position:fixed;
   display: block;
   list-style-type: none;
@@ -142,3 +148,24 @@ div#cartoons-header {
 label {
   font-family: comic sans MS;
 }
+
+#footer {
+  position:fixed;
+  padding-left: 0;
+  text-align: center;
+  background: green;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 40px;
+  padding: 0;
+  border: 0;
+  opacity: 1;
+  z-index: 100;
+}
+
+#about:hover {
+  color: red;
+  cursor: pointer;
+}
+
